.kube/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  labels:
    app: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: core:1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-storage
              mountPath: "/opt/app/shared"
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
