.kube/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
