.kube/app/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-lb
spec:
  type: LoadBalancer
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
