.kube/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
spec:
  rules:
    - host: core.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8080
